@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(logret,default)
+S3method(paratraceplot,svdraws)
 S3method(plot,svdraws)
 S3method(plot,svldraws)
 S3method(plot,svlpredict)
